[package]
name = "starpkg"
version = "0.5.0"
description = "Create composable Paper Mario mods"
homepage = "https://imalex.xyz/starpkg"
repository = "https://github.com/nanaian/starpkg"
categories = [ "command-line-utilities" ]
authors = [ "Alex Bates (https://imalex.xyz)" ]
edition = "2018"
license = "0BSD"
exclude = [ ".github", ".vscode", "examples", "docs" ]

[[bin]]
name = "starpkg"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
regex = "1"
lazy_static = "1.4"
roxmltree = "0.9"
indoc = "0.3"

# Logging
log = { version = "^0.4.1", features = [ "std" ] }
ansi_term = "0.12"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Serde
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
semver = { version = "0.9", features = [ "serde" ] }

[dev-dependencies]
pretty_assertions = "0.6"
assert_cmd = "0.12"
assert_fs = "0.13"
predicates = "1"
